--- a/templates/index.html
+++ b/templates/index.html
@@ -383,7 +383,7 @@
                 <div>
                     <div class="logo-text">Papatroco</div>
                     <div class="logo-subtext">Analisador avançado de transações Bitcoin</div>
-					<div class="logo-subtext">© 2025 - Vytautas Zumas</div>
+					<div class="logo-subtext">© 2025 Versão de testes - Vytautas Zumas</div>
                 </div>
             </div>
             <div class="btn-group">
